# automatica18_scan_and_plan_demo

./: .gitlab-ci.yml  .travis.yml  README.md  snp_demo_deps.rosinstall  snp_prbt.rosinstall
prbt_demo_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_pipeline.launch.xml  sensor_manager.launch.xml
prbt_ikfast_manipulator_plugin/: update_ikfast_plugin.sh
prbt_ikfast_manipulator_plugin/src/: prbt_manipulator_ikfast_moveit_plugin.cpp
psir_demo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
psir_demo_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  snp_psir_demo.srdf
psir_demo_moveit_config/launch/: command_planner_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  snp_psir_description_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
psir_ikfast_manipulator_plugin/: CMakeLists.txt  package.xml  psir_manipulator_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
psir_ikfast_manipulator_plugin/src/: psir_manipulator_ikfast_moveit_plugin.cpp  psir_manipulator_ikfast_solver.cpp
snp_demo_gui/: CMakeLists.txt  package.xml  plugin.xml
snp_demo_gui/src/: command.h  command_widget.cpp  command_widget.h  demo_panel.cpp  demo_panel.h  demo_widget.cpp  demo_widget.h  godel_bridge.cpp  godel_bridge.h
snp_demo_gui/src/ui/: command_widget.ui  demo_widget.ui
snp_prbt_bringup/: CMakeLists.txt  package.xml
snp_prbt_bringup/config/: robot_scan.yaml
snp_prbt_bringup/launch/: application_bringup.launch  hardware_bringup.launch  prbt_gazebo.launch  prbt_godel.launch
snp_prbt_bringup/rviz/: rviz_config.rviz
snp_prbt_description/meshes/acf_with_grinder/: acf_110_01_xs_with_grinder.STL  acf_111_04_with_grinder.STL
snp_prbt_description/models/obj_01/: model.config
snp_prbt_description/urdf/: ensenso.urdf.xacro  prbt_gazebo.xacro  prbt_table.urdf.xacro  snp_prbt_demo.urdf.xacro  snp_tool.urdf.xacro
snp_prbt_description/urdf/acf_with_grinder/: acf_110_01_xs_with_grinder.urdf.xacro  acf_111_04_with_grinder.urdf.xacro
snp_prbt_description/worlds/: prbt_robot.world
snp_prbt_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
snp_prbt_moveit_config/config/: controllers.yaml  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  snp_prbt_demo.srdf
snp_prbt_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  snp_prbt_description_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
snp_prbt_support/: package.xml
snp_prbt_support/launch/: setup_camera.launch
snp_prbt_support/scripts/: ensenso_interface
snp_prbt_support/src/: prbt_blend_process_service_node.cpp  spindle_sim.cpp
snp_psir_bringup/: CMakeLists.txt  package.xml
snp_psir_bringup/config/: arm_controller.yaml  robot_scan.yaml
snp_psir_bringup/launch/: application_bringup.launch  hardware_bringup.launch  psir_gazebo.launch  psir_godel.launch  psir_real.launch  rviz.launch
snp_psir_bringup/rviz/: rviz_config.rviz
snp_psir_description/: CMakeLists.txt  package.xml
snp_psir_description/meshes/: ensenso_n35.STL  table.stl  tool_fixture.STL
snp_psir_description/models/obj_01/: model.sdf
snp_psir_description/urdf/: ensenso.urdf.xacro  psir_table.urdf.xacro  snp_psir_demo.urdf.xacro  snp_tool.urdf.xacro
snp_psir_description/urdf/acf_with_grinder/: acf_110_01_xs_with_grinder.urdf.xacro  acf_111_04_with_grinder.urdf.xacro
snp_psir_support/: CMakeLists.txt  package.xml
snp_psir_support/launch/: setup_camera.launch
snp_psir_support/scripts/: ensenso_interface  set_region_of_interest
snp_psir_support/src/: psir_blend_process_service_node.cpp
snp_py/: CMakeLists.txt  package.xml  setup.py
snp_py/scripts/: snp_auto_run
snp_py/src/snp_py/: snp_helper.py  snp_interface.py
snp_py/test/: snp.test  test_snp.py
