<?xml version='1.0' encoding='UTF-8'?>
<package format="2">
  <name>prbt_ikfast_manipulator_plugin</name>
  <version>0.0.0</version>
  <description>The prbt_ikfast_manipulator_plugin package</description>

  <maintainer email="harshavardhan.deshpande@ipa.fraunhofer.de">Harsh Deshpande</maintainer>
  <maintainer email="jonathan.hechtbauer@ipa.fraunhofer.de">Jonathan Hechtbauer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>liblapack-dev</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf_conversions</depend>
  <depend>urdf</depend>

  <export>
    <moveit_core plugin="${prefix}/prbt_manipulator_moveit_ikfast_plugin_description.xml"/>
  </export>

</package>
