<?xml version="1.0"?>
<package format="2">
  <name>snp_prbt_support</name>
  <version>0.0.0</version>
  <description>The snp_prbt_support package</description>

  <maintainer email="harshavardhan.deshpande@ipa.fraunhofer.de">Harsh Deshpande</maintainer>
  <maintainer email="jonathan.hechtbauer@ipa.fraunhofer.de">Jonathan Hechtbauer</maintainer>

  <author email="ludovic.delval@ipa.fraunhofer.de">Ludovic Delval</author>
  <author email="mathias.luedtke@ipa.fraunhofer.de">Mathias Ludtke</author>
  <author email="qiyao.shi@ipa.fraunhofer.de">Qiyaoe Shi</author>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>godel_msgs</build_depend>
  <build_depend>industrial_robot_simulator_service</build_depend>
  <build_depend>libmodbus-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>ensenso_camera</exec_depend>
  <exec_depend>ensenso_camera_msgs</exec_depend>
  <exec_depend>godel_msgs</exec_depend>
  <exec_depend>industrial_robot_simulator_service</exec_depend>
  <exec_depend>libmodbus-dev</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <export>

  </export>
</package>
