<?xml version="1.0"?>
<package format="2">
  <name>snp_py</name>
  <version>0.0.0</version>
  <description>Scan and plan Python interface</description>
  <maintainer email="jonathan.hechtbauer@ipa.fraunhofer.de">Jonathan Hechtbauer</maintainer>
  <author email="jonathan.hechtbauer@ipa.fraunhofer.de">Jonathan Hechtbauer</author>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>godel_msgs</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>rospy</exec_depend>
  <!-- <exec_depend>snp_prbt_bringup</exec_depend>  Removed since bringup_pkg as arg
  <exec_depend>snp_prbt_support</exec_depend> -->
  <exec_depend>std_srvs</exec_depend>

  <test_depend>rostest</test_depend>

</package>
